# synse-docs

./: .gitignore  .jenkins  .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/: dependabot.yml
docs/: contributing.md  helm.md  index.md  license.md  plugins.md  releases.md
docs/cli/: installing.md  intro.md  usage.md
docs/client-go/: intro.md
docs/client-python/: intro.md
docs/sdk/: architecture.md  intro.md  questions.md  quickstart.md  tutorial.md
docs/sdk/concepts/: c_backend.md  command_line_arguments.md  concepts.md  device_aliases.md  device_handlers.md  device_ids.md  device_tags.md  dynamic_registration.md  outputs.md  plugin_actions.md  plugin_functions.md  plugin_health.md  plugin_metadata.md  plugin_metrics.md  plugin_options.md  reading_outputs.md  subscribing_to_data.md
docs/sdk/configuration/: device.md  plugin.md
docs/sdk/developer/: setup.md  testing.md
docs/sdk/user/: advanced.md  architecture.md  basic.md  concepts.md  configuration.device.md  configuration.md  configuration.plugin.md  outputs.md  questions.md  quickstart.md  tutorial.md
docs/server/: api.v3.md  intro.md
docs/server/developer/: debugging.md  localization.md  setup.md  testing.md
docs/server/user/: advanced.md  configuration.md  deploying.md  getting.md  monitoring.md  quickstart.md  tags.md
