[tool.poetry]
name = "synse-docs"
version = "0.1.0"
description = "Documentation for the Synse platform."
authors = ["Erick Daniszewski <erick@vapor.io>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.1"
pymdown-extensions = "^8.1"
pygments = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
