[tool.poetry]
name = "synse-docs"
version = "0.1.0"
description = "Documentation for the Synse platform."
authors = ["Erick Daniszewski <erick@vapor.io>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.0"
pymdown-extensions = "^9.0"
pygments = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
